test_suite/tests/ui/unexpected-literal/field.stderr
error: unexpected literal in nested attribute, expected ident
 --> tests/ui/unexpected-literal/field.rs:5:13
  |
3 | #[derive(Serialize)]
  |          --------- in this derive macro expansion
4 | struct S {
5 |     #[serde("literal")]
  |             ^^^^^^^^^
  |
  = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
